--- a/ScrollShooter.vcxproj
+++ b/ScrollShooter.vcxproj
@@ -30,7 +30,7 @@
     <ClInclude Include="src\resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="src\ScrollShooter.rc" />
+    <ResourceCompile Include="src\Runner games.rc" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Background.cpp" />
@@ -47,6 +47,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{6A0DC571-FC4D-4147-A419-E4ADCE4BA3F6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>Runner games</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
