--- a/ScrollShooter.vcxproj.filters
+++ b/ScrollShooter.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="src\Enemies.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Hedges.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Entity.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Enemies.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Hedges.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
