--- a/ScrollShooter.vcxproj.filters
+++ b/ScrollShooter.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="src\Scroll_Shooter_Enemies_Cars.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Movable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Entity.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Scroll_Shooter_Enemies_Cars.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Movable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
